<resources>
    <string name="app_name">Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="alerts">Alerts</string>
    <string name="setting">Setting</string>
    <string name="open_location"><u>open Location Permission</u></string>
    <string name="provide_the_location_permission">Provide the location permission</string>
    <string name="settings">Settings</string>
    <string name="make_sure_location_permission_is_turned_on">Make sure location permission is turned on</string>
    <string name="oops_can_t_determine_your_location">Oops, Can\'t determine your location</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="pressure">Pressure</string>
    <string name="_7_day_forecast">7-DAY FORECAST</string>
    <string name="h">H:</string>
    <string name="l">L:</string>
    <string name="last_update">Last update:</string>
    <string name="today">Today</string>
    <string name="now">Now</string>
    <string name="meter_second">meter/second</string>
    <string name="mile_hour">mile/hour</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="notifications">Notifications</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="wind_speed">Wind speed</string>
    <string name="meter_sec">Meter / Sec</string>
    <string name="mile_hour_settings">Mile / Hour</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="no_items_added_yet">No items added yet</string>
    <string name="no_locations_added_yet">No locations added yet</string>
    <string name="no_alerts_added_yet">No alerts added yet</string>
    <string name="delete_location">Delete location</string>
    <string name="delete_location_message">Are you sure you want to delete this location from favorites?</string>
    <string name="delete_alert">Delete alert</string>
    <string name="delete_alert_message">Are you sure you want to delete this alert?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="search">search</string>
    <string name="pick_your_location">Pick your location</string>
    <string name="confirm_your_location">Confirm your location</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="save">Save</string>
    <string name="weather_condition">Weather Condition</string>
    <string name="dismiss">Dismiss</string>
    <string name="from_">From:</string>
    <string name="to_">To:</string>
</resources>